--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background: #878476;
+  background: #4c3a51;
 }
 
 .container {
@@ -30,7 +30,7 @@ html {
   font-size: 20px; /* 1 */
   height: 2em;
   width: 4em;
-  background: #bdb9a6;
+  background: #b25068;
   border-radius: 1em;
 }
 
@@ -49,5 +49,4 @@ html {
   -webkit-transform: translate3d(100%, 0, 0);
   -moz-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
-  background: #fff;
 }
