--- a/wishes.css
+++ b/wishes.css
@@ -20,6 +20,7 @@ html {
 }
 body {
   font-family: "Poppins", sans-serif !important;
+  background-color: #252323 !important;
 }
 a {
   color: var(--dark);
